Fixed dice game btn alignment.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -356,6 +356,10 @@ a {
 button:focus {
   outline: none;
 }
+.dice-btns {
+  display: flex;
+  justify-content: center;
+}
 
 #resetBtn {
   display: none;
